Thu Apr 24 02:56:07 UTC 2008  Brian Johnson  <johnson_b@ociweb.com>

        * dds/DCPS/Registered_Data_Types.cpp:

          Removed debug statement.

Wed Apr 23 21:32:04 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * tests/DCPS/Reconnect/run_test.pl:
          Put a delay for InfoRepo to stabilize state.

Wed Apr 23 17:14:58 UTC 2008  Brian Johnson  <johnson_b@ociweb.com>

        * bin/ProcessFactory.pm:

          Cleaning up print statement;

Wed Apr 23 17:01:55 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * tests/DCPS/Prst_delayed_subscriber/pub.ini:
        * tests/DCPS/Prst_delayed_subscriber/sub.ini:
        * tests/DCPS/Reconnect/pub.ini:
        * tests/DCPS/Reconnect/sub.ini:
        * tests/DCPS/sub_init_loop/pub.ini:
        * tests/DCPS/sub_init_loop/sub.ini:
          Use transient ports instead of fixed ports. Fixed ports can
          produce bogus errors.

Wed Apr 23 16:50:26 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * Changelog

          I missed commiting  the Changelog.

Wed Apr 23 16:44:57 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/subscriber.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/subscriber.cpp:
        * examples/DCPS/IntroductionToOpenDDS/subscriber.cpp:
        * examples/DCPS/Messenger_IOGR_Imr/subscriber.cpp:
        * examples/DCPS/Messenger_Imr/subscriber.cpp:
        * performance-tests/DCPS/McastListenerTest/subscriber.cpp:
        * performance-tests/DCPS/SimpleLatency/sample_pub.cpp:
        * performance-tests/DCPS/SimpleLatency/sample_sub.cpp:
        * performance-tests/DCPS/TCPListenerTest/subscriber.cpp:
        * performance-tests/DCPS/TransportLatency/subscriber.cpp:
        * performance-tests/DCPS/UDPListenerTest/subscriber.cpp:
        * tests/DCPS/BuiltInTopicTest/subscriber.cpp:
        * tests/DCPS/CompatibilityTest/subscriber.cpp:
        * tests/DCPS/CorbaSeq/subscriber.cpp: