@@ -1,3 +1,8 @@
+Thu Apr 24 14:23:53 UTC 2008  Ciju John  <johnc at ociweb dot com>
+
+        * tests/DCPS/LivelinessTimeout/DataReaderListener.cpp:
+          Fix scoreboard warnings.
+
 Thu Apr 24 02:56:07 UTC 2008  Brian Johnson  <johnson_b@ociweb.com>
 
         * dds/DCPS/Registered_Data_Types.cpp:
